deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: toures-balon-api-gateway-deployment
  labels:
    app: toures-balon-api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: toures-balon-api-gateway
  template:
    metadata:
      labels:
        app: toures-balon-api-gateway
    spec:
      containers:
        - name: toures-balon-api-gateway
          image: alejoab12/toures-balon-api-gateway
          ports:
            - containerPort: 8090
