service.yml
apiVersion: v1
kind: Service
metadata:
  name: toures-balon-api-gateway-service
spec:
  selector:
    app: toures-balon-api-gateway
  ports:
    - protocol: TCP
      port: 8090
